<?xml version="1.0"?>
<package format="2">
  <name>controller_teleop</name>
  <version>1.0.0</version>
  <description>Generic controller teleop for ROS2 Humble</description>

  <maintainer email="hevcuesta@gmail.com">Daniel Cuesta</maintainer>
  <license>GPL 3.0</license>

<build_depend>ament_cmake</build_depend>
<build_depend>rclcpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>controller_interface</build_depend>

<exec_depend>rclcpp</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>controller_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
